# agent_smith

./: .gitignore  BENCHMARK_REPORT.md  README.md  TODO.md  mcp_tools_swebench.py  pyproject.toml
benchmark_outputs/pydata__xarray-4629/: deepseek-v4-flash.json  gemma-4-26b-a4b-it.json  llama-3.3-70b-versatile.json  llama-4-scout-17b-16e-instruct.json  qwen3-32b.json
benchmark_outputs/scikit-learn__scikit-learn-13439/: deepseek-v4-flash.json  gemma-4-26b-a4b-it.json  llama-3.3-70b-versatile.json  llama-4-scout-17b-16e-instruct.json  qwen3-32b.json
benchmark_outputs/sympy__sympy-13480/: deepseek-v4-flash.json  gemma-4-26b-a4b-it.json  llama-3.3-70b-versatile.json  llama-4-scout-17b-16e-instruct.json  qwen3-32b.json
docs/: CODEBASE_GUIDE.md  TODO.md  bug-moulinette-docker-rootless.md  test_models.md
student/: .env.example  agent_mbpp.py  agent_swebench.py  mcp_tools_mbpp.py  mcp_tools_swebench.py  sandbox_cli.py  test_llm.py
student/core/: test_llm.py
student/core/agent/: agent.py
student/core/cli/: base_agent.py
student/core/extractor/: code_extractor.py
student/core/llm/: clients.py  key_manager.py  model.py  models.py  test_llm.py
student/core/mcp/: client.py
student/core/sandbox/: config.py  sandbox.py
student/models/: mbpp.py  swebench.py
