[project]
name = "agent-smith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[project.scripts]
sandbox = "student.sandbox_cli:main"
agent_mbpp = "student.agent_mbpp:main"
agent_swebench = "student.agent_swebench:main"

[tool.uv]
package = true

[tool.mypy]

[[tool.mypy.overrides]]
module = ["mcp.*", "requests"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["student"]